add experiment page for recognition

--- a/recognition-api/requirements.txt
+++ b/recognition-api/requirements.txt
@@ -1,5 +1,17 @@
 pytesseract
-ultralytics
+
+pyyaml
+requests
+scipy
+tqdm
+pandas
+psutil
+dill
+py-cpuinfo
+
+torch
+torchvision
+
 numpy
 opencv-python-headless
 pillow
