--- a/PlateVisionAPI/requirements.txt
+++ b/PlateVisionAPI/requirements.txt
@@ -1,30 +1,8 @@
-pytesseract
-
-pyyaml
-requests
-scipy
-tqdm
-pandas
-psutil
-dill
-py-cpuinfo
-
-torch
-torchvision
-
-numpy
-opencv-python-headless
-pillow
-matplotlib
-
+# Auto-generated requirements.txt
 fastapi
-uvicorn
-python-multipart
-
 joblib
-thop
-
-scikit-learn
-
+matplotlib
+numpy
 paddleocr
-paddlepaddle
+psutil
+ultralytics
