lambda containarize successful

--- a/PlateVisionAPI/requirements.txt
+++ b/PlateVisionAPI/requirements.txt
@@ -3,10 +3,11 @@ fastapi
 joblib
 mangum
 matplotlib
-numpy
 onnxruntime
 psutil
 pyclipper
 shapely
 ultralytics
 python-multipart
+scikit-learn
+numpy<2
