fix Dockerfile path

--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           IMAGE_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO
 
-          docker build -t $IMAGE_URI:$IMAGE_TAG .
+          docker build -f PlateVisionAPI/aws_lambda.Dockerfile -t $IMAGE_URI:$IMAGE_TAG .
           docker tag $IMAGE_URI:$IMAGE_TAG $IMAGE_URI:$IMAGE_SHA
 
           docker push $IMAGE_URI:$IMAGE_TAG
